--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=BeeCMF
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -31,3 +31,6 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+
+BACKEND_NAME="BeeCMF Backends"
